--- a/public/css/simplesimon.css
+++ b/public/css/simplesimon.css
@@ -2,6 +2,20 @@
 html{
 	background: black;
 }
+button{
+	background: orange;
+	border: 0;
+	border-radius: 15px;
+	padding-left: 10px; 
+	padding-right: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-bottom: 100px;
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: 15px;
+	font-weight: bold;
+}
 #radar{
 	width: 800px;
 }
@@ -50,3 +64,30 @@ html{
 	position: absolute;
 	z-index: 100;
 }
+#leftside{
+	position: absolute;
+	left: -250px;
+	top: 320px;
+	z-index: 200;
+	width: 120px;
+}
+#rightside{
+	position: absolute;
+	right: -250px;
+	top: 320px;
+	z-index: 200;
+	width: 120px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
